[package]
name = "promformat"
description = "Simple formatter for prometheus metrics"
author = "vmalloc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/vmalloc/promformat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
