[package]
name = "promformat"
description = "Simple formatter for prometheus metrics"
authors = ["Rotem Yaari"]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/vmalloc/promformat"
keywords = ["prometheus", "metrics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
